# influxdb2

./: .gitignore  CHANGELOG  Cargo.toml  LICENSE.md  README.md  ROADMAP.md  TODO
.github/workflows/: rust.yml
examples/: health.rs  label.rs  measurement.rs  multifield.rs  multimodel.rs  precision.rs  query.rs  ready.rs  setup.rs  with_reqwest_builder.rs  write.rs  write_with_builder.rs
influxdb2-derive/: Cargo.toml
influxdb2-derive/src/: expand_tuple.rs  expand_writable.rs  lib.rs
influxdb2-derive/tests/: multistruct.rs  struct.rs  writable.rs
influxdb2-structmap/: Cargo.toml
influxdb2-structmap-derive/: Cargo.toml
influxdb2-structmap-derive/src/: lib.rs
influxdb2-structmap-derive/tests/: struct.rs
influxdb2-structmap/src/: lib.rs  value.rs
influxdb_line_protocol/: Cargo.toml
influxdb_line_protocol/src/: lib.rs
src/: lib.rs  writable.rs
src/api/: authorizations.rs  buckets.rs  delete.rs  health.rs  label.rs  mod.rs  organization.rs  query.rs  ready.rs  setup.rs  task.rs  write.rs
src/domain/: mod.rs
src/models/: authorization.rs  data_point.rs  file.rs  mod.rs  query.rs  resource.rs  task.rs
src/models/ast/: dialect.rs  identifier.rs
structmap/: Cargo.toml
structmap-derive/: Cargo.toml
structmap-derive/src/: lib.rs
structmap-derive/tests/: struct.rs
structmap/src/: lib.rs
test_helpers/: Cargo.toml
test_helpers/src/: lib.rs  tracing.rs
tests/: health.rs  setup.rs
tests/common/: server_fixture.rs
