[package]
name = "influxdb2"
version = "0.1.0"
authors = ["Armin Primadi <aprimadi@gmail.com>", "Paul Dix <paul@pauldix.net>"]
keywords = ["influxdb", "influxdb2", "influxdb-client"]
description = "Influxdb 2 client library for rust"
homepage = "https://github.com/aprimadi/influxdb2"
repository = "https://github.com/aprimadi/influxdb2"
license = "MIT"
edition = "2018"

[dependencies] # In alphabetical order
influxdb_line_protocol = { path = "./influxdb_line_protocol" }
structmap = { path = "./structmap" }
structmap-derive = { path = "./structmap-derive" }

# crates.io dependencies
base64 = "0.13"
bytes = { version = "1.0", default-features = false }
chrono = "0.4"
csv = "1.1"
fallible-iterator = "0.2.0"
futures = { version = "0.3", default-features = false }
go-parse-duration = "0.1"
reqwest = { version = "0.11", features = ["stream", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.44"
snafu = "0.6.6"
url = "2.1.1"

[dev-dependencies] # In alphabetical order
mockito = "0.26.0"
once_cell = { version = "1.4.0", features = ["parking_lot"] }
parking_lot = "0.11.1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
test_helpers = { path = "./test_helpers" }
