[package]
name = "influxdb2"
version = "0.3.0"
authors = ["Armin Primadi <aprimadi@gmail.com>", "Paul Dix <paul@pauldix.net>"]
keywords = ["influxdb", "influxdb2", "influxdb-client"]
description = "Influxdb 2 client library for rust"
homepage = "https://github.com/aprimadi/influxdb2"
repository = "https://github.com/aprimadi/influxdb2"
license = "MIT"
edition = "2018"

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls"]

[dependencies] # In alphabetical order
influxdb2-structmap = { version = "0.2.0", path = "./influxdb2-structmap" }
influxdb2-derive = { version = "0.1.0", path = "./influxdb2-derive" }

# crates.io dependencies
base64 = "0.13"
bytes = { version = "1.0", default-features = false }
chrono = { version = "0.4", features = ["serde"] }
csv = "1.1"
dotenv = "0.15.0"
fallible-iterator = "0.2.0"
futures = { version = "0.3", default-features = false }
go-parse-duration = "0.1"
nom = "6"
opentelemetry = { version = "0.13", default-features = false, features = ["trace", "metrics", "rt-tokio"] }
ordered-float = "3.0"
parking_lot = "0.11.1"
reqwest = { version = "0.11", features = ["stream", "json"], default-features = false}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.44"
serde_qs = "0.10"
smallvec = "1.2.0"
snafu = "0.6.6"
tempfile = "3.1.0"
tracing = { version = "0.1", features = ["max_level_trace", "release_max_level_debug"] }
tracing-subscriber = { version = "0.2", default-features = false, features = ["env-filter", "smallvec", "chrono", "parking_lot", "registry", "fmt", "ansi", "json"] }
url = "2.1.1"

[dev-dependencies] # In alphabetical order
mockito = "0.26.0"
num-traits = "0.2"
once_cell = { version = "1.4.0", features = ["parking_lot"] }
parking_lot = "0.11.1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
test_helpers = { path = "./test_helpers" }

