[package]
name = "influxdb2"
version = "0.5.2"
authors = ["Armin Primadi <aprimadi@gmail.com>", "Paul Dix <paul@pauldix.net>"]
keywords = ["influxdb", "influxdb2", "influxdb-client"]
description = "Influxdb 2 client library for rust"
homepage = "https://github.com/aprimadi/influxdb2"
repository = "https://github.com/aprimadi/influxdb2"
license = "MIT"
edition = "2018"

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls-tls"]
gzip = ["reqwest/gzip", "dep:async-compression", "dep:tokio-util"]

[dependencies] # In alphabetical order
influxdb2-structmap = { version = "0.2.0", path = "./influxdb2-structmap" }
influxdb2-derive = { version = "0.1.1", path = "./influxdb2-derive" }

# crates.io dependencies
base64 = "0.13"
bytes = { version = "1.0", default-features = false }
chrono = { version = "0.4", features = ["serde"] }
csv = "1.1"
fallible-iterator = "0.2.0"
futures = { version = "0.3", default-features = false }
go-parse-duration = "0.1"
ordered-float = "3.0"
parking_lot = "0.11.1"
reqwest = { version = "0.11", features = ["stream", "json"], default-features = false}
secrecy = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.44"
snafu = "0.6.6"
url = "2.1.1"
async-compression = { version = "0.4.3", features = ["tokio", "gzip"], optional = true }
tokio-util = { version = "0.7.8", features = ["io"], optional = true }

[dev-dependencies] # In alphabetical order
mockito = "0.26.0"
num-traits = "0.2"
once_cell = { version = "1.4.0", features = ["parking_lot"] }
parking_lot = "0.11.1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
test_helpers = { path = "./test_helpers" }
